feature: adicionado endpoint para retornar o todos os usuario que o usuario logado segue
