# openapi.yaml
@@ -134,6 +134,8 @@ paths:
         '400':
           description: Campos inválidos
             
+            
+            
   /api/posts/{postId}/delete:
     delete:
       summary: Deleta uma postagem
@@ -200,7 +202,38 @@ paths:
                 items:
                   $ref: '#/components/schemas/Post' 
         
-            
+  
+  /api/users/{username}/posts:
+    get:
+      summary: Posts de um usuário
+      description: Retorna os posts de um determinado usuário
+      parameters:
+        - name: username
+          in: path
+          description: username do usuário
+          required: true
+          schema: 
+            type: string
+        - name: page
+          in: query
+          description: numero da pagina da paginação
+          required: false
+          schema: 
+            type: integer
+      security:
+        - bearerAuth: []
+      responses:
+        '200': 
+          description: lista de posts do usuário
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        '404':
+          description: usuário não encontrado
+          
             
   
   /api/users/{username}/follow:
@@ -244,7 +277,21 @@ paths:
         '404':
           description: Usuário não encontrado
           
-
+  /api/users/following:
+    get:
+      summary: Retorna os usuário
+      description: Retornar a lista de usuário que se esta seguindo.
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: lista de usuários seguidos
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: '#/components/schemas/User'
 
 components:
   securitySchemes:
@@ -293,9 +340,6 @@ components:
     User:
       type: object
       properties:
-        id:
-          type: string
-          example: d8228d83-dbb5-4086-8808-b1bd790eb1e8
         username:
           type: string
           example: rodrigo
